rewrite ability system to not use tungsten

--- a/data/gen/item_modifiers/ability/apply_cooldown.json
+++ b/data/gen/item_modifiers/ability/apply_cooldown.json
@@ -7,8 +7,8 @@
         },
         "ops": [
             {
-                "source": "new_cooldown",
-                "target": "gen.stat.cooldown",
+                "source": "cooldown",
+                "target": "gen.ability.cooldown",
                 "op": "replace"
             }
         ]
