Worked on mineral enchanting system

--- a/data/gen/loot_tables/gear/tools/apprentice_mallet.json
+++ b/data/gen/loot_tables/gear/tools/apprentice_mallet.json
@@ -5,7 +5,7 @@
         "entries": [
           {
             "type": "minecraft:item",
-            "name": "minecraft:wooden_axe"
+            "name": "minecraft:stone_axe"
           }
         ],
         "functions": [
