--- a/data/gen/loot_tables/food/caramelized_apple.json
+++ b/data/gen/loot_tables/food/caramelized_apple.json
@@ -6,12 +6,12 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "{CustomModelData:982004,gen:{name:\"Mana Bean\"}}"
+              "tag": "{CustomModelData:982101,gen:{name:\"Caramelized Apple\",on_eat:{saturation:4}}}"
             },
             {
               "function": "minecraft:set_name",
               "name": {
-                "translate": "item.gen.crops.produce.mana_bean",
+                "translate": "item.gen.food.caramelized_apple",
                 "italic": false
               }
             },
@@ -19,9 +19,9 @@
               "function": "minecraft:set_lore",
               "lore": [
                 {
-                  "translate": "genesis.lore.rarity.2",
+                  "translate": "genesis.lore.rarity.0",
                   "italic": false,
-                  "color": "yellow",
+                  "color": "white",
                   "with": [
                     {
                       "text": "A",
@@ -29,9 +29,15 @@
                       "color": "white"
                     },
                     {
-                      "translate": "genesis.lore.type.ingredient"
+                      "translate": "genesis.lore.type.snack"
                     }
                   ]
+                },
+                {
+                  "translate": "genesis.lore.saturation.4",
+                  "font": "genesis:icon",
+                  "italic": false,
+                  "color": "white"
                 }
               ]
             }
