--- a/data/gen/loot_tables/food/caramelized_apple.json
+++ b/data/gen/loot_tables/food/caramelized_apple.json
@@ -6,7 +6,7 @@
           "functions": [
             {
               "function": "minecraft:set_nbt",
-              "tag": "{CustomModelData:982101,gen:{name:\"Caramelized Apple\",on_eat:{saturation:4}}}"
+              "tag": "{CustomModelData:982101,gen:{name:\"Caramelized Apple\",when_eaten_function:\"function gen:food/internal/effects/caramelized_apple\",on_eat:{saturation:4}}}"
             },
             {
               "function": "minecraft:set_name",
@@ -38,6 +38,14 @@
                   "font": "genesis:icon",
                   "italic": false,
                   "color": "white"
+                },
+                {
+                  "translate":"Absorption I (0:15)",
+                  "color":"blue",
+                  "italic":false
+                },
+                {"translate":"A sweet treat!",
+                "color":"gray"
                 }
               ]
             }
